fixed overflowing svg

--- a/styles/_nav.scss
+++ b/styles/_nav.scss
@@ -9,19 +9,20 @@
 	height: 7vh;
 	background: rgba($color: $base-yellow, $alpha: 0);
 	z-index: 10;
-	box-shadow: 0 6px 6px -6px black;
+	// box-shadow: 0 6px 6px -6px black;
+	box-shadow: rgba(0, 0, 0, 0.117647) 0 1px 3px;
 
 	&__nav-links {
 		display: flex;
 		justify-content: space-around;
-		width: 30%;
+		// width: 30%;
 		margin-right: 1%;
 		letter-spacing: 2px;
 
 		li {
 			list-style-type: none;
 			position: relative;
-
+			margin: 0 20px;
 			a {
 				text-decoration: none;
 				text-transform: uppercase;
@@ -33,40 +34,42 @@
 						transform: scale(1, 1);
 					}
 
-					&::after {
-						transform: scale(1, 1);
-					}
+					// &::after {
+					// 	transform: scale(1, 1);
+					// }
 				}
 
 				&::before {
 					content: "";
 					display: block;
-					background-color: rgba($color: $base-black, $alpha: 0);
+					background-color: rgba($color: $base-black, $alpha: 1);
 					position: absolute;
 					bottom: -14px;
-					top: -14px;
-					left: -14px;
-					right: -14px;
+					// top: -14px;
+					// left: -14px;
+					// right: -14px;
+					width: 100%;
+					height: 2px;
 					transform: scale(0, 1);
 					transition: transform 250ms ease-in;
 					border-top: 1px solid $base-black;
 					border-bottom: 1px solid $base-black;
 				}
 
-				&::after {
-					content: "";
-					display: block;
-					background-color: rgba($color: $base-black, $alpha: 0);
-					position: absolute;
-					bottom: -14px;
-					top: -14px;
-					left: -14px;
-					right: -14px;
-					transform: scale(1, 0);
-					transition: transform 250ms ease-in;
-					border-left: 1px solid $base-black;
-					border-right: 1px solid $base-black;
-				}
+				// &::after {
+				// 	content: "";
+				// 	display: block;
+				// 	background-color: rgba($color: $base-black, $alpha: 0);
+				// 	position: absolute;
+				// 	bottom: -14px;
+				// 	top: -14px;
+				// 	left: -14px;
+				// 	right: -14px;
+				// 	transform: scale(1, 0);
+				// 	transition: transform 250ms ease-in;
+				// 	border-left: 1px solid $base-black;
+				// 	border-right: 1px solid $base-black;
+				// }
 			}
 		}
 
