--- a/styles/_new-at-pepper.scss
+++ b/styles/_new-at-pepper.scss
@@ -24,6 +24,7 @@
 			bottom: -15px;
 			left: -15px;
 			right: -15px;
+			z-index: 0;
 			border: 2px solid $base-black;
 			box-shadow: 0px 10px 5px rgba(0, 0, 0, 0.1),
 				10px 15px 5px rgba(0, 0, 0, 0.05), -10px 15px 5px rgba(0, 0, 0, 0.05);
