--- a/styles/_svg.scss
+++ b/styles/_svg.scss
@@ -33,6 +33,7 @@
 
 .big_logo {
 	position: absolute;
+	right: 0;
 	width: 100vw;
 	height: 100vh;
 	top: 6vh;
